<resources>
    <string name="app_name">306CW</string>
    <string name="search_hint">Search an Artefact…</string>
    <string name="edit_image_description">Large image of artefact with button to add image</string>
    <string name="edit_image_button_text">Add Artefact Image</string>
    <string name="edit_artefact_name">Artefact Name</string>
    <string name="edit_year_hint">Year of release (e.g 1998)</string>
    <string name="edit_content_hint">Artefact Text</string>
    <string name="like_button_desc">like button to favourite artefact</string>
    <string name="comment_hint">Your comment goes here.....</string>
    <string name="comment_submit_hint">send button to submit comment</string>
    <string name="comments_text">Comments:</string>
    <string name="menu_image_desc">Image of artefact</string>
    <string name="delete_menu_desc">Delete item</string>
    <string name="edit_item_desc">Edit item</string>
    <string name="avatar_desc">comment\'s user avatar</string>
    <string name="delete_comment_desc">Delete comment</string>
    <string name="approve_comment_desc">approve comment button</string>
    <string name="artefact_large_image_desc">Large image of artefact</string>
    <string name="welcome_image_desc">Welcome Image of University faculty building</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="guest_button_text">Continue as guest</string>
    <string name="plua_icon_desc">plus icon to add new artefact</string>
    <string name="new_artefact_text">Add New Artefact</string>
    <string name="log_out_text">Log Out</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="firebase_instance">https://cw-fc5f2-default-rtdb.europe-west1.firebasedatabase.app/</string>
    <string name="change_image_text">Change Images</string>
    <string name="create_new_artefact_text">Creating New Artefact</string>
    <string name="welcome_bar_text">Swansea University History of CS</string>
    <string name="signin_to_comment">Please Sign In to Comment</string>
    <string name="changed_fav_mes">Changed favourite artefact</string>
    <string name="error_liking">Error liking artefact</string>
    <string name="error_comment">Comment Post Failed</string>
    <string name="comment_posted">Comment has been posted!</string>
    <string name="login_email">Logged In with email</string>
    <string name="register_but_signed_in">Dont register while signed in</string>
    <string name="username_hint">Enter your Username</string>
    <string name="username">Username</string>
    <string name="alert_username_msg">Enter your Username:</string>
    <string name="altert_ok">Ok</string>
    <string name="enter_username_msg">Enter a username to registe</string>
    <string name="altert_cancel">Cancel</string>
</resources>