<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent = "1" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/artifact"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/artifactImageLayout">



        <ImageView
            android:id="@+id/artifactImage"
            android:layout_width="match_parent"
            android:layout_height="398dp"
            android:contentDescription="@string/edit_image_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/placeholder"
            android:alpha="0.6"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <Button
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_image_button_text" />


            </RelativeLayout>

        </RelativeLayout>

        <EditText
            android:id="@+id/artefactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.03"
            android:padding="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:hint="@string/edit_artefact_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/artifactImageLayout"
            app:layout_constraintTop_toBottomOf="@+id/artifactImageLayout"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/artefactYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium_italic"
            android:letterSpacing="0.03"
            android:padding="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:hint="@string/edit_year_hint"
            android:textColor="@color/black"
            android:inputType="number"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/artefactText"
            app:layout_constraintTop_toBottomOf="@+id/artefactName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/artefactText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:letterSpacing="0.02"
            android:lineSpacingMultiplier="1.5"
            android:autofillHints="paste"
            android:maxLength="10000"
            android:padding="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:inputType="textMultiLine"
            android:hint="@string/edit_content_hint"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artefactYear"
            app:layout_constraintVertical_bias="0.0" />







    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView></LinearLayout>