<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/primary">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/placeholder"
            android:contentDescription="@string/avatar_desc"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/userText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/icon"
            android:layout_marginTop="12dp"
            android:layout_marginStart="75dp"
            android:layout_marginBottom="0dp"
            android:textSize="16sp"
            android:layout_toStartOf="@id/deleteButton"
            android:fontFamily="@font/roboto_medium_italic"
            android:textColor="#000000"
            android:letterSpacing="0.03"

            android:shadowColor="#FFFFFF"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"/>

        <TextView
            android:id="@+id/commentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userText"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@id/deleteButton"
            android:layout_toRightOf="@id/icon"
            android:fontFamily="@font/roboto_medium_italic"
            android:letterSpacing="0.03"
            android:shadowColor="#000000"
            android:layout_marginBottom="12dp"

            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="@color/textP"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="17dp"
            android:layout_marginTop="12dp"
            android:letterSpacing="0.02"
            android:contentDescription="@string/delete_comment_desc"
            android:background="@drawable/delete"
            android:shadowColor="#000000" />

        <ImageButton
            android:id="@+id/acceptButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/deleteButton"
            android:layout_alignEnd="@id/deleteButton"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/approve_comment_desc"
            android:background="@drawable/approve" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>