<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/artifact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/viewPagerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"

            android:layout_width="match_parent"
            android:layout_height="398dp" />

        <LinearLayout
            android:id="@+id/dotsIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/artifactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.03"
            android:padding="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/viewPagerLayout" />


        <TextView
            android:id="@+id/artefactText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:letterSpacing="0.02"
            android:lineSpacingMultiplier="1.5"
            android:maxLength="10000"
            android:padding="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/commentsRecyclerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artifactName"
            app:layout_constraintVertical_bias="0.0" />

        <view
            android:id="@+id/commentsRecyclerView"
            class="androidx.recyclerview.widget.RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteY="789dp"
            android:elevation="10dp"
            android:background="@color/background"/>


        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:background="@null"
            android:elevation="4dp"
            android:onClick="likeArtefactClick"
            android:scaleType="fitCenter"
            android:src="@drawable/heartinacircle"
            android:contentDescription="@string/like_button_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="336dp"
            android:layout_height="53dp"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:inputType="text"
            android:padding="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:hint="@string/comment_hint"
            android:autofillHints=""
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/commentsRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/CommentsTextView"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/commentSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="postCommentClick"
            android:contentDescription="@string/comment_submit_hint"
            app:layout_constraintBottom_toTopOf="@id/commentsRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/commentEditText"
            app:layout_constraintTop_toBottomOf="@id/CommentsTextView"
            app:srcCompat="@android:drawable/ic_menu_send" />

        <TextView
            android:id="@+id/CommentsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments_text"
            android:padding="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/commentEditText"
            app:layout_constraintTop_toBottomOf="@id/artefactText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>